[package]
name = "spire-poc-monorepo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "enforcer"
path = "apps/enforcer"

[[bin]]
name = "gateway-api"
path = "apps/gateway-api"

[[bin]]
name = "proposer-poc"
path = "apps/proposer-poc"

[workspace]
members = [
    "apps/*",
    "packages/*",
    ]
