[package]
name = "enforcer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
axum-macros = "0.4.1"
dotenv = "0.15"
ethers = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
spvm-rs = { version = "0.1.0", path = "../../packages/spvm-rs" }
redis = { version = "0.25.4", features = ["tokio-comp"] }
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4.3"
http-body-util = "0.1.0"
tower-http = { version = "0.5.0", features = ["trace"] }
tower = { version = "0.4", features = ["util"] }
mime = "0.3"
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "sqlx-sqlite"] }
spvm-entity = { version = "0.1.0", path = "../../packages/spvm-rs/entity" }
spvm-migration = { version = "0.1.0", path = "../../packages/spvm-rs/migration" }
local-ip-address = "0.6.1"
