[package]
name = "proposer-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
ethers = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
spvm-rs = { path = "../../packages/spvm-rs" }
sea-orm = { version = "0.12.15", features = ["sqlx-postgres"] }
spvm-entity = { version = "0.1.0", path = "../../packages/spvm-rs/entity" }
spvm-migration = { version = "0.1.0", path = "../../packages/spvm-rs/migration" }
tokio = { version = "1.0", features = ["full"] }
